--- a/src/components/AddCard/AddCard.css
+++ b/src/components/AddCard/AddCard.css
@@ -1,32 +1,46 @@
-#add-card{
-    position: fixed;
-    inset: 0;
-    backdrop-filter: blur(3px);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-weight: 400;
-  }
-  
-  #details{
-    background-color: #2c3e50;
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-    gap: 10px;
-    border-radius: 15px;
-  }
-  
-  .action{
-    display: flex;
-    gap: 5px;
-  }
-  
-  .action button{
-    width: 200px;
-  }
-  
-  #details input, #details textarea{
-    padding: 10px;
-    resize: none;
-  }
+#add-card {
+  position: fixed;
+  inset: 0;
+  backdrop-filter: blur(3px);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 400;
+  z-index: 9999; /* Ensure it is on top of other elements */
+}
+
+#details {
+  background-color: #f1f2f4;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  gap: 10px;
+  border-radius: 15px;
+  align-items: center;
+  z-index: 10000; /* Ensure it is above the blurred background */
+}
+
+.action {
+  display: flex;
+  gap: 5px;
+}
+
+.action button {
+  width: 200px;
+}
+
+#details input,
+#details textarea {
+  padding: 10px;
+  resize: none;
+  width: 100%;
+  border: 1px solid lightgrey;
+}
+
+button {
+  padding: 10px 20px;
+  font-size: medium;
+  border: none;
+  cursor: pointer;
+  font-weight: 600;
+}
