--- a/src/components/Board/Board.css
+++ b/src/components/Board/Board.css
@@ -1,5 +1,6 @@
-#board{
+#board {
   width: 100%;
+  height: 98vh;
   display: flex;
   flex-direction: column;
   gap: 2rem;
@@ -9,21 +10,18 @@
   border-radius: 10px;
 }
 
-#columns{
+#columns {
   display: flex;
   width: 100%;
   justify-content: space-around;
 }
 
-h1{
+h1 {
   color: whitesmoke;
 }
 
-button{
-  padding: 10px 20px;
+.add-card {
+  position: absolute;
+  bottom: 50px;
   border-radius: 5px;
-  font-size: medium;
-  border: none;
-  cursor: pointer;
-  font-weight: 600;
 }
