--- a/src/components/Column/Column.css
+++ b/src/components/Column/Column.css
@@ -1,15 +1,29 @@
-.column{
-    background-color: #f1f2f4;
-    width: 24%;
-    height: 700px;
-    user-select: none;
-    overflow-y: scroll;
+.column {
+  background-color: #f1f2f4;
+  width: 24%;
+  max-height: 700px;
+  user-select: none;
+  overflow-y: scroll;
+  padding: 0 10px 10px 10px;
+  height: fit-content;
 }
-h2{
-    text-align: center;
-    padding: 10px 0;
-    color: white;
-    position: sticky;
-    top: 0;
-    margin-bottom: 20px;
+h2 {
+  text-align: center;
+  padding: 10px 0;
+  background-color: #f1f2f4;
+  color: #5d6d7e;
+  position: sticky;
+  top: 0;
+  margin-bottom: 20px;
+  font-size: 22px;
+}
+
+.card-section {
+  min-height: 1px;
+}
+
+button {
+  color: #85929e;
+  background-color: #f1f2f4;
+  font-weight: 400;
 }
