--- a/src/components/AddCardDetails/AddCardDetails.css
+++ b/src/components/AddCardDetails/AddCardDetails.css
@@ -10,7 +10,9 @@
 }
 
 #details {
-  background-color: #f1f2f4;
+  width: 400px;
+  color: white;
+  background-color: #3498db;
   display: flex;
   flex-direction: column;
   padding: 20px;
@@ -21,12 +23,9 @@
 }
 
 .action {
+  width: 100%;
   display: flex;
-  gap: 5px;
-}
-
-.action button {
-  width: 200px;
+  justify-content: space-between;
 }
 
 #details input,
@@ -35,12 +34,17 @@
   resize: none;
   width: 100%;
   border: 1px solid lightgrey;
+  border: 2px solid #2c3e50;
 }
 
-button {
-  padding: 10px 20px;
+.action button {
+  color: white;
+  background-color: #2c3e50;
+  width: 110px;
+  padding: 10px;
   font-size: medium;
   border: none;
   cursor: pointer;
   font-weight: 600;
+  border-radius: 5px;
 }
