--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -2,13 +2,12 @@
   background-color: white;
   cursor: pointer;
   user-select: none;
-  border-radius: 15px;
+  border-radius: 5px;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
-  height: 9em;
+  height: 10em;
   overflow: hidden;
   display: flex;
   flex-direction: column;
-  align-items: center;
   margin-bottom: 20px;
 }
 
@@ -17,18 +16,27 @@
   border: 1px solid gray;
 }
 
-h3 {
-  text-align: center;
+.card h3 {
   border-radius: 15px;
-  padding: 5px 20px;
-  color: #85929e;
   font-size: large;
   width: fit-content;
-  margin-top: 10px;
+  margin-left: 3%;
 }
-p {
-  text-align: justify;
-  margin: 2%;
-  padding: 5px 10px 10px 10px;
+.card #description {
+  margin: 3%;
   font-size: 13px;
+}
+
+#card-action {
+  width: 100%;
+  height: 30px;
+  position: relative;
+}
+
+#card-action #trash {
+  position: absolute;
+  padding: 5px;
+  right: 6px;
+  top: 6px;
+  cursor: pointer;
 }
