--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,22 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
-}
-  
-#root{
-    padding: 0.5rem;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
-::-webkit-scrollbar{
-    width: 10px;
+#root {
+  padding: 0.5rem;
 }
 
-::-webkit-scrollbar-track{
-    background-color: #008299;
+::-webkit-scrollbar {
+  width: 10px;
 }
 
-::-webkit-scrollbar-thumb{
-    background-color: lightgrey;
+::-webkit-scrollbar-track {
+  background-color: #2e86c1;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: lightgrey;
 }
