--- a/src/components/AddCardDetails/AddCardDetails.css
+++ b/src/components/AddCardDetails/AddCardDetails.css
@@ -13,7 +13,7 @@
   margin: 1.5rem;
   width: 400px;
   color: white;
-  background-color: #3498db;
+  background-color: #2c3e50;
   display: flex;
   flex-direction: column;
   padding: 20px;
